# BeeChat

./: .gitignore  CMakeLists.txt  README.md  UserMessage.h  clienttest  function calls.txt  makefile  servertest  sftp-config.json  test  udptest
BeeChat.xcode/BeeChat.xcodeproj/: project.pbxproj
BeeChat/BeeChat.xcodeproj/: project.pbxproj
include/: AppMain.cpp  BeeChatApp.h  BeeChatException.h  Block.h  ChatConnection.h  Client.h  ClientChatConnection.h  ClientMessage.h  GUI.h  Message.h  MessageFactory.h  Server.h  ServerChatConnection.h  ServerMessage.h  Snake.h  UDP.h  UDPAppMain.cpp  UDPClient.h  UDPConnection.h  UDPServer.h  UIPresentation.h  User.h  UserInputReceiver.h  UserL.h  UserMessage.h  Windows.h  beeChatApp.h  settings.h  theFood.h  theSnake.h
include/ConnectionLayer/: ChatConnection.h  ClientChatConnection.h  ClientMessage.h  IChatConnection.h  ServerChatConnection.h  UDPClient.h  UDPConnection.h  UDPServer.h
include/snake/: Block.h  Snake.h  theFood.h  theSnake.h
src/: AppMain.cpp  BeeChatApp.cpp  Block.cpp  ChatConnectionTest.cpp  Client.cpp  ClientChatConnection.cpp  GUI.cpp  GUItest.cpp  IChatConnection.cpp  MessageFactory.cpp  Server.cpp  ServerChatConnection.cpp  Snake.cpp  UDPAppTest.cpp  UDPClient.cpp  UDPClientTest.cpp  UDPConnection.cpp  UDPServer.cpp  UDPServerTest.cpp  UserL.cpp  Windows.cpp  main.cpp  settings.cpp  sock_addr.c  theFood.cpp  theSnake.cpp
src/ConnectionLayer/: ChatConnection.cpp  ClientChatConnection.cpp  IChatConnection.cpp  ServerChatConnection.cpp  UDPClient.cpp  UDPClientTest.cpp  UDPConnection.cpp  UDPServer.cpp  UDPServerTest.cpp
src/snake/: Block.cpp  Snake.cpp  theFood.cpp  theSnake.cpp
test/: testmain.cpp  testmain.h  testmessage.cpp  testsettings.cpp  testutils.cpp
(+7 files in other folders)
